demo/pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: frontend-app
  namespace: nginx-gateway
  labels:
    app: frontend
spec:
  containers:
    - name: frontend-container
      image: nginx
      ports:
        - containerPort: 80
